overflow contents of new product corrected

--- a/src/component/Products/Products.css
+++ b/src/component/Products/Products.css
@@ -1,27 +1,22 @@
-:root {
-    --dark-color: #3074f0;
-    --primary-color: #f7c9d2;
-    --light-color: #f5f5f5;
-    --success-color: #888888;
-    --nav-color: #000000cd;
-    --font-color: #ffffff;
-  }
+.Products_main {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 1rem;
+  margin: 0 auto ;  /* Center the grid horizontally */
+  max-width: 1200px; /* Optional: Set a max-width to limit the width of the grid */
+  justify-items: center;
+  
+}
+
+@media screen and (max-width: 768px) {
   .Products_main {
-    display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    gap: 1rem;
   }
-  
-  @media screen and (max-width: 768px) {
-    .Products_main {
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    }
+}
+
+@media screen and (max-width: 480px) {
+  .Products_main {
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    gap: 0.5rem;
   }
-  
-  @media screen and (max-width: 480px) {
-    .Products_main {
-      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-      gap: 0.5rem;
-    }
-  }
-  
+}
